# MAPFT_MPPI

./: .gitignore  README.md  main.py  mapft_mppi.py  pyproject.toml
baselines/: __init__.py  ddpg.py  ppo.py  sac.py
benchmark/: performance_metrics.py
controllers/: mppi.py
core/: controller_base.py
dynamics/: quadrotor.py
examples/: experiment_iLQR.py  trap_navigation.py
experiments/: advanced_benchmark.py  benchmark.py  environments.py  generate_figures.py  gym_benchmark.py  progressive_test.py  run_all.py
legacy/controllers/: ilqr.py  ma_mppi.py python
legacy/dynamics/: car_model.py
legacy/memory/: feature_detector.py
legacy/scenarios/: dynamic_obstacles.py
legacy/visualization/: potential_visualizer.py
mapft/: __init__.py  adaptive.py  ma_mppi.py  ma_mppi_v2.py  ma_mppi_v3.py  ma_mppi_v4.py  memory.py  mppi.py  potentials.py
memory/: hierarchical_memory.py  memory_repository.py
potentials/: memory_potential.py python
scenarios/: maze_scenario.py
utils/: common.py
